# legisph

./: .flake8  .gitignore  00-core.html  01-website.html  02-senate.html  02a-senate-models.html  02b-senate-website.html  02c-senate-extraction.html  CHANGELOG.md  README.md  index.html  pyproject.toml  robots.txt  sandbox.ipynb  search.json  settings.ini  sitemap.xml
.github/workflows/: doc_deploy.yml  pkg_testing.yml
legisph/: _modidx.py  core.py  senate.py  website.py
legisph/senate/: bill_status.py  models.py  website.py
notebooks/: 00-core.ipynb  01-website.ipynb  02-senate.ipynb  02A-senate-models.ipynb  02B-senate-website.ipynb  02C-senate-bill_status.ipynb  02C-senate-extraction.ipynb  index.ipynb  nbdev.yml  sidebar.yml
