[tool.poetry]
name = "legisph"
version = "0.1.0"
description = "Legislative Analysis of the Philippines"
authors = ["TJ P <mail@tjpalanca.com>"]
license = "CC BY-NC-ND 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests-cache = "^0.9.6"
pydantic = "^1.10.2"
more-itertools = "^8.14.0"
diskcache = "^5.4.0"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
tjutils = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
