[tool.poetry]
name = "legisph"
version = "0.2.1"
description = "Legislative Analysis of the Philippines"
authors = ["TJ P <mail@tjpalanca.com>"]
license = "CC BY-NC-ND 4.0"
readme = "README.md"
homepage = "https://tjpalanca.com/legisph"
documentation = "https://tjpalanca.com/legisph"
repository = "https://github.com/tjpalanca/legisph.git"

[tool.nbdev]
branch = "master"

[tool.poetry.dependencies]
python = "^3.11.1"
requests-cache = "^0.9.6"
pydantic = "^1.10.2"
more-itertools = "^8.14.0"
diskcache = "^5.4.0"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"
requests = "^2.28.1"
black = {extras = ["jupyter"], version = "^22.10.0"}
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
tjutils = "^0.10.0"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
